# reasonTrie

./: .gitignore  README.md  dune-project  package-lock.json  package.json  reasonTrie.install  reasonTrie.opam
.github/workflow/: test-workflow.yml
.github/workflows/: test-workflow.yml
.husky/: pre-commit
_build/: .db  .digest-db  log
_build/default/: LICENSE  reasonTrie.dune-package  reasonTrie.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/reList/: reList.cma  reList.cmxa  reList.cmxs  reList.re.ml  reList.rei.mli
_build/default/lib/reList/.merlin-conf/: lib-reList
_build/default/lib/reString/: reString.cma  reString.cmxa  reString.cmxs  reString.re  reString.re.ml  reString.rei  reString.rei.mli
_build/default/lib/reUtils/: reUtils.cma  reUtils.cmxa  reUtils.cmxs  reUtils.re.ml  reUtils.rei.mli
_build/default/lib/reasonTrie/: reasonTrie.cma  reasonTrie.cmxa  reasonTrie.cmxs  reasonTrie.re  reasonTrie.re.ml  reasonTrie.rei  reasonTrie.rei.mli
_build/default/test/: reasonEulerProjectTest.re  reasonEulerProjectTest.re.ml
_build/default/test/.merlin-conf/: exe-reasonEulerProjectTest
esy.lock/: index.json
lib/reInt/: dune  reInt.re  reInt.rei
lib/reList/: dune  reList.re  reList.rei
lib/reQCheck/: dune  reQCheck.re
lib/reString/: dune
lib/reUtils/: dune  reUtils.re  reUtils.rei
lib/reasonTrie/: dune  reasonTrie.re  reasonTrie.rei
test/: dune  test.re
test/pbTest/: dune  pbTest.re
test/unitTest/: dune
test/unitTestBasics/: dune  unitTestBasic.re
test/unitTestComplex/: dune  unitTestComplex.re
(+29 files in other folders)
