(lang dune 3.10)

(name reasonTrie)

(generate_opam_files true)

(source
 (github Leatherlord/reasonTrie))

(authors "Boyko Vladislav")

(maintainers "Boyko Vladislav")

(package
 (name reasonTrie)
 (synopsis "Functional Programming second assignment.")
 (description "Polymorphic Trie in ReasonML")
 (depends ocaml dune reason))
